--- a/sos/package.json
+++ b/sos/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@expo/webpack-config": "~0.16.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/material-bottom-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "0.68.1",
+    "react-native": "0.68.2",
+    "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
     "webpack-dev-server": "~3.11.0"
   },
